--- a/index.html
+++ b/index.html
@@ -6,3 +6,6 @@ layout: home
 title: Home
 banner: "/assets/images/banners/home.jpeg"
 ---
+
+<h1>Welcome to UNIST DIL Lab!</h1>
+<p>This is our official research lab homepage powered by GitHub Pages and Jekyll.</p>
