Banner sequences, Research.md, Contact.md added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@ title: Home
 banner: "/assets/images/banners/home.jpeg"
 ---
 
-<h1>Welcome to UNIST DIL Lab!</h1>
-<p>This is our official research lab homepage powered by GitHub Pages and Jekyll.</p>
+<h1>Welcome to UNIST DILab!</h1>
+<p>This is our official research lab homepage.</p>
+<p>Thank you for visiting our homepage.</p>
