--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: home
-# title: Home
+title: ""
+subheading: ""
 banner: "/assets/images/banners/banner1.jpg"
 ---
 
